@@ -15,6 +15,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #23071: Added missing names to codecs.__all__.  Patch by Martin Panter.
+
 - Issue #23016: A warning no longer produces an AttributeError when sys.stderr
   is None.
 
